fix(api): allow empty sets to force no structures to generate in FlatLevelGeneratorSettings